assets/styles/documentation/documentation-main-page.less
.documentation-main-page {
	font-family: @mainFont;
	div.page-header {
		.pageHeader();
    .footerGradient();
		div.page-header-container {
			// background: url('/images/img_sailsShadow.png') no-repeat 42% bottom;
			padding: 95px 0 35px;
      position: relative;
			h5 {
				font-style: italic;
			}
		}
	}
	div.main-container {
		.container();
		.clearfix();
		padding: 50px 0 50px;

		ul.link-list {
			.borderBox();
			width: 60%;
			padding: 10px 50px 50px 0px;
			float: left;
			a {
				.clearfix();
				cursor: pointer;
        li {
          .clearfix();
          padding-bottom: 50px;
          position: relative;
          padding-left: 90px;
          img.icon {
            position: absolute;
            width: 70px;
            left: 0;
            top: 5px;
					}
					div.description {
            .borderBox();
						h2 {
							.docs_h1();
							font-size: 32px;
							padding: 7px 0 0;
						}
						p {
							color: @dkerGray;
							font-weight: @normal;
							font-size: 14px;
						}
					}
				}
				&:hover {
					li div.description h2 {
						color: black;
						.transition(all 300ms);
					}
				}
			}
      .irc-directions {
        // background-color: @turquoise;
        padding: 20px;
        border-radius: 10px;
        h4 {
          color: @turquoise;
          font-weight: @light;
          font-size: 1.2em;
        }
        p {
          font-size: .8em;
        }
      }
		}

		div.version-notes-links {
			.borderBox();
			height: 100%;
			float: right;
			background-color: @bgLtGray;
			padding: 30px 50px;
			border: 1px solid @ltestGray;
            width: 35%;
            min-width: 325px;
            max-width: 350px;
			>h3 {
				color: @headerGray;
				font-weight: @light;
				font-size: 18px;
				padding-bottom: 20px;
				text-align: center;
			}
			>h5 {
				color: @headerGray;
				font-weight: @semibold;
				padding-bottom: 10px;
			}
			>ul {
				padding: 0 0 35px 15px;
				li {
					font-size: 15px;
					line-height: 2;
					font-weight: @light;
				}
				a {
					color: @turquoise;
					&:hover {
						color: black;
						.transition(all 300ms);
					}
				}
			}
		}
	}
  @media screen and (max-width: 1000px) {
    div.main-container {
      ul.link-list {
        float: none;
        width: 100%;
        padding-right: 0px;
      }
      div.version-notes-links {
        float: none;
        width: 100%;
        max-width: 100%;
      }
    }
  }
  @media screen and (max-width: 500px) {
    div.page-header {
      text-align: center;
    }
    div.main-container {
      ul.link-list {
        a li {
          padding-left: 60px;
          img.icon {
            width: 45px;
            top: 10px;
          }
          div.description {
            h2 {
              font-size: 26px;
            }
          }
        }
      }
    }
  }
}

